migrate int to Long for ids